--- a/worlds/templates/worlds/index.html
+++ b/worlds/templates/worlds/index.html
@@ -10,23 +10,26 @@
         <!-- Blog Entries Column -->
         <div class="col-12 mt-3 left">
             <div class="row">
-                {% for post in post_list %}
+                {% for room in room_list %}
                 <div class="col-md-4">
                     <div class="card mb-4">
                         <div class="card-body">
                             <div class="image-container">
                                 <div class="image-flash">
-                                    <p class="author">Author: {{ post.author }}</p>
+                                    <p class="author">Experience: {{ room.display_name }}</p>
                                 </div>
                             </div>
-                            <a href="{% url 'post_detail' post.slug %}" class="post-link">
-                                <h2 class="card-title">{{ post.title }}</h2>
-                                <p class="card-text">{{ post.excerpt}}</p>
+                            <p class="room-description">{{ room.description | safe}}</p>
+
+                            <a href="{% url 'room_details' room.slug %}" class="post-link">
+                                <button>SHOW DETAILS</button>
+                                
                             </a>
+                            <img src="{{ room.image.url }}" alt="">
 
                             <hr />
-                            <p class="card-text text-muted h6">{{ post.created_on}}
-                            </p>
+                            <!-- <p class="card-text text-muted h6">{{ post.created_on}}
+                            </p> -->
                         </div>
                     </div>
                 </div>
