--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -19,12 +19,8 @@
     </div>
     <div class="row justify-content-center">
         <div class="col-12 col-md-6 my-5">
-            <h2>Let's collaborate!</h2>
-            <p>I believe in the power of shared knowledge and collective effort.
-                Whether you have a project in mind, wish to co-author
-                an article, or simply want to brainstorm some ideas,
-                I'm excited to hear from you. Fill out the form
-                and we can get the ball rolling!</p>
+            <h2>Contact Form</h2>
+            <p>Need any extra information, or would like to rent all the rooms for a special event? <br> Please contact us, and we'll get back ASAP!</p>
 
             <form method="post">
                 {{ collaborate_form | crispy }}
