try to fix img, bug persists

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
                     {% endif %}
                 </ul>
                 <span class="navbar-text text-muted">
-                    Romantic Experiences Restaurant
+                    Romantic Dinning & Chilling
                 </span>
             </div>
         </div>
