--- a/worlds/templates/worlds/index.html
+++ b/worlds/templates/worlds/index.html
@@ -11,29 +11,26 @@
         <div class="col-12 mt-3 left">
             <div class="row">
                 {% for room in room_list %}
-                <div class="col-md-4">
-                    <div class="card mb-4">
+                <div class="col-md-6">
+                    <div class="card mb-6">
                         <div class="card-body">
                             <div class="image-container">
                                 <div class="image-flash">
-                                    <p class="author">Experience: {{ room.display_name }}</p>
+                                    <p class="display_name">{{ room.display_name }}</p>
                                 </div>
                             </div>
                             <p class="room-description">{{ room.description | safe}}</p>
-
+                            <img class="scale" src="{{ room.image.url }}" alt="">
+                            <hr>
                             <a href="{% url 'room_details' room.slug %}" class="post-link">
-                                <button>SHOW DETAILS</button>
-                                
+                                <button>SHOW DETAILS</button>     
                             </a>
-                            <img src="{{ room.image.url }}" alt="">
-
-                            <hr />
                             <!-- <p class="card-text text-muted h6">{{ post.created_on}}
                             </p> -->
                         </div>
                     </div>
                 </div>
-                {% if forloop.counter|divisibleby:3 %}
+                {% if forloop.counter|divisibleby:2 %}
             </div>
             <div class="row">
                 {% endif %}
