--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -39,22 +39,22 @@ body {
     position: relative;
 }
 
-.image-flash {
+/* .image-flash {
     position: absolute;
     bottom: 5%;
     min-width: 30%;
     left: -2px;
     background-color: #188181;
-}
+} */
 
 .scale {
     height: 250px;
     width: 250px;
     vertical-align: middle;
-    object-fit: cover;
+    /* object-fit: cover; */
 }
 
-.author {
+.display_name {
     color: white;
     margin: 4px;
     text-transform: uppercase;
