update credits on readme,include 3 images on Room model

--- a/worlds/templates/worlds/room_details.html
+++ b/worlds/templates/worlds/room_details.html
@@ -12,7 +12,7 @@
                 <!-- Room description -->
                 {{ room.description | safe }}
                 
-                <div class="d-none d-md-block col-md-6 masthead-image"><img src="{{ room.image.url}}" alt="" class="scale"></div>
+                <div class=""><img src="{{ room.image.url}}" alt="" class="scale"></div>
               
             </div>
             {% else %}
