--- a/worlds/templates/worlds/index.html
+++ b/worlds/templates/worlds/index.html
@@ -7,7 +7,7 @@
 <div class="container-fluid">
     <div class="row">
 
-        <!-- Blog Entries Column -->
+        <!-- Room Display -->
         <div class="col-12 mt-3 left">
             <div class="row">
                 {% for room in room_list %}
