room display, update booking times in Room model

--- a/worlds/templates/worlds/room_details.html
+++ b/worlds/templates/worlds/room_details.html
@@ -6,7 +6,7 @@
     <div class="container">
         <div class="row g-0">
             {% if room.image %}
-            <div class="col-md-6 col-sm-12 masthead-text">
+            <div class="col-12 masthead-text">
                 <!-- Room display_name goes in these h1 tags -->
                 <h1>{{ room.display_name }}</h1>
                 <!-- Room description -->
