Bug n Delete functionality -- Only CRU functionality working

--- a/bookings/templates/bookings/booking_list.html
+++ b/bookings/templates/bookings/booking_list.html
@@ -2,14 +2,15 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-
-<h1>My Bookings</h1>
-<ul>
-{% for booking in object_list %}
-    <li>{{booking.room}}: {{ booking.date }} - {{ booking.start_time }} <a href="{% url 'booking_update' booking.pk %}">UPDATE</a></li>
-{% empty %}
-    <li>No bookings to display yet.</li>
-{% endfor %}
-</ul>
+<div id="booking-list">
+    <h1>My Bookings</h1>
+    <ul>
+    {% for booking in object_list %}
+        <li class="booking-list-object">{{booking.room}}: {{ booking.date }} - {{ booking.start_time }} <a class="update" href="{% url 'booking_update' booking.pk %}">UPDATE</a> <a class="delete" href="{% url 'booking_confirm_delete' booking.pk %}">DELETE</a></li>
+    {% empty %}
+        <li>No bookings to display yet.</li>
+    {% endfor %}
+    </ul>    
+</div>
 
 {% endblock %}
