--- a/bookings/templates/bookings/booking_form.html
+++ b/bookings/templates/bookings/booking_form.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-<div id="booking-form">
+<div class="form">
   <h1>BOOKING FORM</h1>
 
   <form method="post">
